# mytime

./: README.md  package-lock.json  package.json  plan.md  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  app_usage_monitor.rs  config.rs  db.rs  input_aggregator.rs  input_monitor.rs  ipc.rs  lib.rs  main.rs  models.rs  network_monitor.rs  services.rs  singleton.rs  startup.rs
src/app/: App.tsx  activityAppUsage.ts
src/app/api/: activity.ts  dashboard.ts  inputMonitor.ts  network.ts  sunburstSettings.ts  system.ts  tauri.ts
src/app/components/: ActivityHeatmap.tsx  ActivityTimeline.tsx  DomainTracker.tsx  FocusCorrelator.tsx  HelpPage.tsx  InputVisualizer.tsx  LiveActivityFeed.tsx  LivePulseStrip.tsx  NetworkStatus.tsx  NetworkUsageChart.tsx  RegionMap.tsx  Sidebar.tsx  SpeedGauge.tsx  StatCard.tsx
src/app/components/network/: BandwidthSplitter.tsx  DataVelocityHeatmap.tsx  LivePacketMatrix.tsx  NetworkQuotaBurndown.tsx
src/app/components/reports/: CategoryManagerModal.tsx  ContextSwitchingReport.tsx  ProfitabilityHeatmap.tsx  SunburstChart.tsx
src/app/components/timeline/: AppIcon.tsx  AppUsageList.tsx  TimelineEditor.tsx  TimelineToolbar.tsx  TimelineTracks.tsx  (+1 more)
src/app/hooks/: useActivityAppUsage.ts  useActivityHeatmap.ts  useActivityInputMinutes.ts  useActivityOverview.ts  useActivitySessionPage.ts  useActivityTimeline.ts  useAdaptivePollInterval.ts  useAppStatus.ts  useDashboardSummary.ts  useNetworkData.ts
src/app/types/: backend.ts
src/app/utils/: format.ts  formatTooltipValue.ts
src/styles/: theme.css
(+5 files in other folders)
